--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
                 android:paddingBottom="4dp"
                 android:paddingRight="8dp"
                 android:paddingTop="4dp"
-                android:srcCompat="@drawable/ic_public_green_24dp" />
+                app:srcCompat="@drawable/ic_public_green_24dp" />
 
             <Switch
                 android:id="@+id/enable_switch"
@@ -61,7 +61,7 @@
                 android:paddingBottom="4dp"
                 android:paddingRight="8dp"
                 android:paddingTop="4dp"
-                android:srcCompat="@drawable/ic_my_location_green_24dp" />
+                app:srcCompat="@drawable/ic_my_location_green_24dp" />
 
             <TextView
                 android:layout_width="wrap_content"
