--- a/app/src/main/res/layout/rules.xml
+++ b/app/src/main/res/layout/rules.xml
@@ -1,6 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/message_button"
+        style="@style/myButtonStyle"
+        android:onClick="onSMSButtonClicked"
+        android:layout_width="269dp"
+        android:layout_height="68dp"
+        android:layout_marginBottom="44dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/send_sms"/>
+
+    <Button
+        android:id="@+id/email_button"
+        style="@style/myButtonStyle"
+        android:onClick="onEmailButtonClicked"
+        android:layout_width="269dp"
+        android:layout_height="68dp"
+        android:layout_marginBottom="44dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/e_mail"/>
+
+    <Button
+        android:id="@+id/notification_button"
+        style="@style/myButtonStyle"
+        android:onClick="onNotificationButtonClicked"
+        android:layout_width="269dp"
+        android:layout_height="68dp"
+        android:layout_marginBottom="44dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/notification_rules"/>
+
+</LinearLayout>
