--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,17 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="myDetailTitleStyle" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 
-
-
+    <style name="myButtonStyle" parent="TextAppearance.AppCompat.Button">
+        <item name="android:textColor">@color/TextOnLight</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:colorBackground">@color/colorAccent</item>
+    </style>
 
 </resources>
