feat: add ui for contacts

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
                 style="@style/myButtonStyle"
                 android:onClick="onRulesButtonClicked"
                 android:layout_width="269dp"
-                android:layout_height="68dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="60dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
@@ -70,7 +70,7 @@
                 style="@style/myButtonStyle"
                 android:onClick="onContactsButtonClicked"
                 android:layout_width="269dp"
-                android:layout_height="68dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="44dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
@@ -87,7 +87,7 @@
                 style="@style/myButtonStyle"
                 android:onClick="onPlaceButtonClicked"
                 android:layout_width="269dp"
-                android:layout_height="57dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
