--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
         <item name="android:textColor">@color/TextOnLight</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:colorBackground">@color/colorAccent</item>
+        <item name="android:background">@color/colorAccent</item>
     </style>
 
 </resources>
