--- a/app/src/main/res/layout/place_item.xml
+++ b/app/src/main/res/layout/place_item.xml
@@ -20,7 +20,7 @@
 
     <LinearLayout
         android:id="@+id/place_info_layout"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -35,6 +35,7 @@
 
         <TextView
             android:id="@+id/place_name"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
