--- a/app/src/main/res/layout/new_rule.xml
+++ b/app/src/main/res/layout/new_rule.xml
@@ -9,7 +9,8 @@
 
     <Spinner
         android:id="@+id/type_spinner"
-        android:layout_width="fill_parent"
+        style="@style/mySpinnerStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
@@ -21,6 +22,7 @@
 
     <Spinner
         android:id="@+id/name_spinner"
+        style="@style/mySpinnerStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
@@ -33,7 +35,8 @@
 
     <Spinner
         android:id="@+id/arrival_spinner"
-        android:layout_width="fill_parent"
+        style="@style/mySpinnerStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
@@ -45,8 +48,9 @@
 
     <Spinner
         android:id="@+id/departure_spinner"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"/>
 
 
     <android.support.design.widget.FloatingActionButton
