--- a/app/src/main/res/layout/new_rule.xml
+++ b/app/src/main/res/layout/new_rule.xml
@@ -7,59 +7,86 @@
     android:orientation="vertical"
     android:textAlignment="center">
 
-    <Spinner
-        android:id="@+id/type_spinner"
-        style="@style/mySpinnerStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/name_text_info"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="TO" />
-
-    <Spinner
-        android:id="@+id/name_spinner"
-        style="@style/mySpinnerStyle"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/arrival_text_info"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="AFTER REACHING" />
-
-    <Spinner
-        android:id="@+id/arrival_spinner"
-        style="@style/mySpinnerStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/dep_text_info"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="FROM" />
-
-    <Spinner
-        android:id="@+id/departure_spinner"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"/>
+        android:layout_margin="8dp"
+        android:orientation="horizontal">
 
+        <Spinner
+            android:id="@+id/type_spinner"
+            android:layout_width="2dp"
+            android:layout_height="wrap_content"
+            android:minHeight="12dp" />
 
-    <android.support.design.widget.FloatingActionButton
+        <TextView
+            android:id="@+id/name_text_info"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Send SMS to" />
+
+        <Spinner
+            android:id="@+id/name_spinner"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:minHeight="12dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/arrival_text_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="after reaching" />
+
+        <Spinner
+            android:id="@+id/arrival_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="12dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/dep_text_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="from " />
+
+        <Spinner
+            android:id="@+id/departure_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center" />
+    </LinearLayout>
+
+    <Button
         android:id="@+id/save_rule_FAB"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|end"
         android:layout_margin="16dp"
+        android:background="@drawable/rounded_button"
         android:clickable="true"
         android:onClick="onSaveRuleClick"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:text="Save SMS Rule"
         app:srcCompat="@android:drawable/ic_menu_save" />
 </LinearLayout>
