--- a/app/src/main/res/layout/places.xml
+++ b/app/src/main/res/layout/places.xml
@@ -47,6 +47,8 @@
         </RelativeLayout>
     </LinearLayout>
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,14 +63,14 @@
             app:srcCompat="@drawable/ic_public_green_24dp" />
 
         <Switch
-            android:id="@+id/enable_switch"
+            android:id="@+id/enable_switch2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:text="Enable Stalking"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+           </LinearLayout>
 
-    </LinearLayout>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/places_list_recycler_view"
             android:layout_width="match_parent"
