--- a/app/src/main/res/layout/new_rule.xml
+++ b/app/src/main/res/layout/new_rule.xml
@@ -11,20 +11,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <Spinner
-            android:id="@+id/type_spinner"
-            android:layout_width="2dp"
-            android:layout_height="wrap_content"
-            android:minHeight="12dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/name_text_info"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_weight="1"
+            android:gravity="start"
             android:text="Send SMS to" />
 
         <Spinner
@@ -32,6 +32,7 @@
             android:layout_width="0dp"
             android:layout_weight="2"
             android:layout_height="wrap_content"
+            android:gravity="end"
             android:minHeight="12dp" />
 
     </LinearLayout>
@@ -44,15 +45,17 @@
 
         <TextView
             android:id="@+id/arrival_text_info"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_weight="1"
             android:text="after reaching" />
 
         <Spinner
             android:id="@+id/arrival_spinner"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
+            android:gravity="end"
             android:minHeight="12dp" />
     </LinearLayout>
 
@@ -64,15 +67,19 @@
 
         <TextView
             android:id="@+id/dep_text_info"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_weight="1"
+            android:gravity="start"
             android:text="from " />
 
         <Spinner
             android:id="@+id/departure_spinner"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:gravity="end"
+            android:minHeight="12dp"
             android:textAlignment="center" />
     </LinearLayout>
 
@@ -84,9 +91,89 @@
         android:layout_margin="16dp"
         android:background="@drawable/rounded_button"
         android:clickable="true"
-        android:onClick="onSaveRuleClick"
+        android:onClick="onSaveSendingRuleClick"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:text="Save SMS Rule"
         app:srcCompat="@android:drawable/ic_menu_save" />
+</LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/name_text_info2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Notify me to let" />
+
+            <Spinner
+                android:id="@+id/name_spinner2"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:minHeight="12dp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/arrival_text_info2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="know about my safe " />
+
+            <Spinner
+                android:id="@+id/type_spinner"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:minHeight="12dp" />
+        </LinearLayout>
+
+        <Spinner
+            android:id="@+id/place_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:gravity="start"
+            android:minHeight="12dp" />
+
+        <Button
+            android:id="@+id/save_notification_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:layout_margin="16dp"
+            android:background="@drawable/rounded_button"
+            android:clickable="true"
+            android:onClick="onSaveNotifyRuleClick"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="Save Notification Rule"
+            app:srcCompat="@android:drawable/ic_menu_save" />
+    </LinearLayout>
+
+
+
 </LinearLayout>
