--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,12 @@
         <item name="android:background">@color/colorAccent</item>
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
+
+    <style name="myNewRuleStyle" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textColor">@color/TextOnLight</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
 </resources>
