feat: update contacts

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
+                android:background="@drawable/rounded_button"
                 android:text="@string/my_rules"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -53,6 +54,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
+                android:background="@drawable/rounded_button"
                 android:text="@string/contacts"
                 app:layout_constraintBottom_toTopOf="@+id/rules_button"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +72,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
+                android:background="@drawable/rounded_button"
                 android:text="@string/my_places"
                 app:layout_constraintBottom_toTopOf="@+id/contacts_button"
                 app:layout_constraintEnd_toEndOf="parent"
