--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -3,10 +3,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:state_pressed="true">
 
-    <shape android:shape="oval">
-        <gradient android:angle="135" android:endColor="@color/colorAccent" android:startColor="@color/colorPrimary" />
+    <shape android:shape="rectangle">
+        <gradient android:angle="225" android:endColor="@color/colorAccent" android:startColor="@color/colorPrimary" />
         <corners android:radius="10dp" />
-        <stroke android:width="1dp" android:color="@color/colorPrimaryDark" />
+        <stroke android:width="2dp" android:color="@color/colorPrimaryDark" />
     </shape>
 
 </item>
